--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
     <div class="card">
         <div class="img">
-            <img src="images/image-equilibrium.jpg" alt="Image Equilibrium">
+            <img src="images/image-equilibrium.jpg" alt="Image Equilibrium" class="equilibrium">
+			<img src="images/icon-view.svg" alt="" class="view">
         </div>
 
         <div class="texto">
             <h1>Equilibrium #3429</h1>
-		    <p>Our Equilibrium collection promotes <br>balance and calm.</p>
+		    <p>Our Equilibrium collection promotes balance and calm.</p>
         </div>
 
         <div class="items">
